  - Fix Long commit messages overflow viewport in file tree
  - Revert avoid touching file system on Build#artifacts?
  - Stop using a Redis lease when updating the project activity timestamp whenever a new event is created
  - Add broadcast messages and alerts below sub-nav
  - Better empty state for Groups view
  - Update ruby-prof to 0.16.2. !6026 (Elan Ruusamäe)
  - Fix unnecessary escaping of reserved HTML characters in milestone title. !6533
  - Add organization field to user profile
  - Fix resolved discussion display in side-by-side diff view !6575
  - Optimize GitHub importing for speed and memory
  - API: expose pipeline data in builds API (!6502, Guilherme Salazar)
  - Notify the Merger about merge after successful build (Dimitris Karakasilis)
  - Reduce queries needed to find users using their SSH keys when pushing commits
  - Prevent rendering the link to all when the author has no access (Katarzyna Kobierska Ula Budziszewska)
  - Fix broken repository 500 errors in project list
  - Fix Pipeline list commit column width should be adjusted
  - Close todos when accepting merge requests via the API !6486 (tonygambone)
  - Changed Slack service user referencing from full name to username (Sebastian Poxhofer)
  - Add Container Registry on/off status to Admin Area !6638 (the-undefined)
  - Grouped pipeline dropdown is a scrollable container

v 8.12.4 (unreleased)
  - Fix type mismatch bug when closing Jira issue
  - Skip wiki creation when GitHub project has wiki enabled
  - Fix failed project deletion when feature visibility set to private
  - Fix issues importing services via Import/Export
  - Restrict failed login attempts for users with 2FA enabled
  - Fix "Copy to clipboard" tooltip to say "Copied!" when clipboard button is clicked. (lukehowell)

v 8.12.3
  - Update Gitlab Shell to support low IO priority for storage moves

v 8.12.2
  - Fix Import/Export not recognising correctly the imported services.
  - Fix snippets pagination