@@ -7,7 +7,7 @@
         = visibility_level_label(params[:visibility_level].to_i)
       - else
         Any
-      %b.caret
+      = icon('caret-down')
     %ul.dropdown-menu.dropdown-menu-align-right
       %li
         = link_to filter_projects_path(visibility_level: nil) do
@@ -27,7 +27,7 @@
         = params[:tag]
       - else
         Any
-      %b.caret
+      = icon('caret-down')
     %ul.dropdown-menu.dropdown-menu-align-right
       %li
         = link_to filter_projects_path(tag: nil) do
