@@ -3,7 +3,7 @@
     .btn.btn-grouped.btn-white.toggle-pipeline-btn
       %span.toggle-btn-text Hide
       %span pipeline graph
-      %span.caret
+      = icon('caret-up')
     - if can?(current_user, :update_pipeline, pipeline.project)
       - if pipeline.builds.latest.failed.any?(&:retryable?)
         = link_to "Retry failed", retry_namespace_project_pipeline_path(pipeline.project.namespace, pipeline.project, pipeline.id), class: 'btn btn-grouped btn-primary', method: :post
