@@ -5,7 +5,7 @@
   .visible-xs.visible-sm-inline-block.visible-md-inline-block.dropdown
     %button.btn.btn-default.label-options-toggle{ data: { toggle: "dropdown" } }
       Options
-      %span.caret
+      = icon('caret-down')
     .dropdown-menu.dropdown-menu-align-right
       %ul
         %li
