@@ -19,7 +19,7 @@
     .issuable-actions
       .clearfix.issue-btn-group.dropdown
         %button.btn.btn-default.pull-left.hidden-md.hidden-lg{ type: "button", data: { toggle: "dropdown" } }
-          %span.caret
+          = icon('caret-down')
           Options
         .dropdown-menu.dropdown-menu-align-right.hidden-lg
           %ul
